fixed component overlap issue, developed more styling to portfolio and project components, altered work timeline object list

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -72,6 +72,8 @@
   margin-top: 50px;
   padding-bottom: 100px;
   text-align: center;
+  box-shadow: none;
+  
 }
 
 .btn-1 {
@@ -82,6 +84,8 @@
   background-color: #37D4AF;
   border-color: #37D4AF;
   border-radius: 5px;
+  box-shadow: none;
+  outline: none;
   padding: 10px;
   color: #fff;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -89,6 +93,11 @@
   font-size: 20px;
   min-width: 220px;
   height: 70px;
+}
+
+.button:active {
+  transform: none;
+  box-shadow: none;
 }
 
 .button:hover {
