--- a/src/components/Credentials/Credentials.css
+++ b/src/components/Credentials/Credentials.css
@@ -1,3 +1,7 @@
+#resume {
+  margin-top: 50px;
+}
+
 .resumeTitle {
   text-align: center;
   color: #d4af37;
