--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,3 +1,10 @@
+#portfolio {
+  padding-top: 100px;
+  background-color: #f0f0f0;
+  min-height: 100px;
+  overflow: hidden;
+}
+
 .portfolioTitle {
   color: #d4af37;
   text-align: center;
@@ -5,6 +12,7 @@
 
 .portfolioSubTitle {
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .PortfolioContent {
