--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,9 +1,22 @@
+.projectContainer {
+  margin: auto;
+  margin-right: 10px; 
+  padding-bottom: 10px;
+}
+
 .project {
   color: red;
   background-size: contain;
   background-repeat: no-repeat;
-  width: 25%;
-  height: 25%;
+  width: 200px;
+  height: 200px;
+  margin-right: 20px;
+  float: left;
+}
+
+.projectImage {
+  width: 100%;
+  height: 100%;
 }
 
 /* .project {
